   * #2702909 - "CSR Processes: Show process name when confirming termination"
   * #2702911 - "Show process name when terminating process in properties"
   * #2702929 - "Add a Cancel button in Options"
   * #2713088 - "Network: Ctrl+A and Ctrl+C should copy the processes' names"
   * #2714130 - "Option to disable/enable all highlighting colors"
   * Statistics times in System Information and process properties
   * Highlighting system
   * Configurable max. samples and plotter step size
   * Network list with icons
   * Can close multiple handles at once
   * Less memory usage
   * Confirmation dialogs are now consistent and use new Vista interfaces where possible
   * KProcessHacker now retrieves thread start addresses
   * Displays job information for processes
 * FIXED:
   * #2642442 - "System Information label text gets clipped"
   * #2694437 - "Crash when sorting the process list"
   * #2713087 - "Processes: Copy should copy only the columns currently used"
   * #2716815 - "PH crashes during EnumProcesses"
   * Network connections would be readded if their state changed
   * Integer overflows in the process provider and system statistics
   * Memory leaks with various windows
   * Crash when saving with the I/O or CPU History column visible
   * Inconsistent Copy menu after columns are modified
   * Crash when F5 (Refresh) is held down
 * REMOVED:
   * Disassembler - not used very often

1.3.6.1
 * NEW:
   * CPU and I/O history columns
   * System Cache value in System Information
 * FIXED:
   * #2625167 - "Commit charge limit should not be 16EB"
   * #2642385 - "Maximum File Cache size should not be 16EB"
   * Minimize size of the System Information window
   * Settings were lost between versions
   * Handle and memory leaks
   * Integer overflows in System Information

1.3.6.0
 * NEW:
   * #2596473 - "Add "Save Processes""
   * #2596481 - "Add option for one instance of Process Hacker"