@@ -54,11 +54,12 @@ typedef struct _SYSTEM_HANDLE_INFORMATION
 #define KPH_SUSPENDPROCESS KPH_CTL_CODE(9)
 #define KPH_RESUMEPROCESS KPH_CTL_CODE(10)
 #define KPH_READVIRTUALMEMORY KPH_CTL_CODE(11)
-#define KPH_SETPROCESSTOKEN KPH_CTL_CODE(12)
-#define KPH_GETTHREADWIN32STARTADDRESS KPH_CTL_CODE(13)
-#define KPH_GETOBJECTNAME KPH_CTL_CODE(14)
-#define KPH_GETHANDLEOBJECTNAME KPH_CTL_CODE(15)
-#define KPH_OPENPROCESSJOB KPH_CTL_CODE(16)
+#define KPH_WRITEVIRTUALMEMORY KPH_CTL_CODE(12)
+#define KPH_SETPROCESSTOKEN KPH_CTL_CODE(13)
+#define KPH_GETTHREADWIN32STARTADDRESS KPH_CTL_CODE(14)
+#define KPH_GETOBJECTNAME KPH_CTL_CODE(15)
+#define KPH_GETHANDLEOBJECTNAME KPH_CTL_CODE(16)
+#define KPH_OPENPROCESSJOB KPH_CTL_CODE(17)
 
 NTSTATUS KphCreate(PDEVICE_OBJECT DeviceObject, PIRP Irp);
 NTSTATUS KphClose(PDEVICE_OBJECT DeviceObject, PIRP Irp);
