@@ -47,6 +47,8 @@ namespace ProcessHacker
         public static WindowsVersion WindowsVersion = WindowsVersion.Unknown;
 
         public static Win32.PROCESS_RIGHTS MinProcessQueryRights = Win32.PROCESS_RIGHTS.PROCESS_QUERY_INFORMATION;
+        public static Win32.PROCESS_RIGHTS MinProcessReadMemoryRights = Win32.PROCESS_RIGHTS.PROCESS_VM_READ;
+        public static Win32.PROCESS_RIGHTS MinProcessWriteMemoryRights = Win32.PROCESS_RIGHTS.PROCESS_VM_WRITE;
         public static Win32.THREAD_RIGHTS MinThreadQueryRights = Win32.THREAD_RIGHTS.THREAD_QUERY_INFORMATION;
 
         public static int CurrentProcess;
@@ -195,6 +197,12 @@ namespace ProcessHacker
             {
                 MinProcessQueryRights = Win32.PROCESS_RIGHTS.PROCESS_QUERY_LIMITED_INFORMATION;
                 MinThreadQueryRights = Win32.THREAD_RIGHTS.THREAD_QUERY_LIMITED_INFORMATION;
+            }
+
+            if (KPH != null)
+            {
+                MinProcessReadMemoryRights = MinProcessQueryRights;
+                MinProcessWriteMemoryRights = MinProcessQueryRights;
             }
 
             try
