@@ -639,7 +639,8 @@ namespace ProcessHacker
                                             item.IsInJob = true;
                                             item.JobName = jhandle.GetHandleName();
 
-                                            if (limits.LimitFlags != Win32.JOB_OBJECT_LIMIT_FLAGS.JOB_OBJECT_LIMIT_SILENT_BREAKAWAY_OK)
+                                            if (limits.LimitFlags != Win32.JOB_OBJECT_LIMIT_FLAGS.JOB_OBJECT_LIMIT_SILENT_BREAKAWAY_OK && 
+                                                limits.LimitFlags != Win32.JOB_OBJECT_LIMIT_FLAGS.JOB_OBJECT_LIMIT_BREAKAWAY_OK)
                                             {
                                                 item.IsInSignificantJob = true;
                                             }
@@ -776,9 +777,8 @@ namespace ProcessHacker
                     try
                     {
                         using (var phandle = new Win32.ProcessHandle(pid,
-                            Program.MinProcessQueryRights | Win32.PROCESS_RIGHTS.PROCESS_VM_READ))
+                            Program.MinProcessQueryRights | Program.MinProcessReadMemoryRights))
                             item.CmdLine = phandle.GetCommandLine();
-
                     }
                     catch
                     { }
